:adhesive_bandage:: Fixed up text alignment on left container and font-size

--- a/styles/LeftContainer.module.css
+++ b/styles/LeftContainer.module.css
@@ -13,6 +13,7 @@
   margin-top: -1.5rem;
   font-family: Arial, Helvetica, sans-serif;
   color: white;
+  text-align: right;
 }
 
 .bgAnimation {
@@ -34,7 +35,7 @@
 }
 
 .line2 {
-  font-size: 28px;
+  font-size: 26px;
 }
 
 .line3 {
